# magic-resume

magic-resume-rust/: .env.example  Cargo.toml  README.md  demo.md  run_demo.sh
magic-resume-rust/migrations/: 001_initial.sql
magic-resume-rust/src/: main.rs
magic-resume-rust/src/config/: mod.rs
magic-resume-rust/src/handlers/: ai.rs  mod.rs  resume.rs  static_files.rs
magic-resume-rust/src/models/: mod.rs  resume.rs  user.rs
magic-resume-rust/src/services/: ai.rs  database.rs  mod.rs  pdf.rs
magic-resume-rust/src/utils/: file_system.rs  image_utils.rs  mod.rs
magic-resume-rust/static/: index.html
magic-resume-rust/static/css/: styles.css
magic-resume-rust/static/js/: app.js
