[package]
name = "magic_resume"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json", "macros"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for AI services
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Image processing
image = "0.25"

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"